--- a/src/assets/css/NavBar.css
+++ b/src/assets/css/NavBar.css
@@ -75,6 +75,13 @@
 }
 .spi-logo{
     width: 100px !important;
+    margin-left: 12px;
+}
+.navbar-nav{
+    padding-right: 12px !important;
+}
+.nav-p{
+    padding: 0px 22px 0px 22px;
 }
 .navbar-nav .btn-primary {
   background-color:#212529;
@@ -95,7 +102,9 @@
     border-top: 1px solid #dee2e6;
     margin-top: 10px;
   }
-  
+  .navbar-nav{
+    padding-right: 0px !important;
+  }
   .mobile-contact .nav-link {
     padding: 5px 15px;
     display: flex;
