--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -19,7 +19,8 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #fff; /* Changed from background-image to solid white */
+  background-color: #212529 !important; 
+
   z-index: -2;
 }
 
